--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "server": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "redis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
     "nanoid": "^5.1.5",
