--- a/BACKEND/Dockerfile
+++ b/BACKEND/Dockerfile
@@ -2,12 +2,10 @@ FROM node:24
 
 WORKDIR /app
 
-COPY package.json .
+COPY package*.json .
 RUN npm install
 
 COPY . .
-
-ENV MONGO_URI="mongodb://mongodb:27017/url-shortener"
 
 EXPOSE 5001
 
