--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
+    "start": "vite preview --host --port 5173",
     "lint": "eslint .",
     "preview": "vite preview"
   },
